// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when modal window open 1`] = `
<section
  className="container"
>
  <Modal
    removeTrailerInfo={[MockFunction]}
    trailer={null}
    trailerError={null}
    trailerIsLoading={false}
  />
  <FilterTabs
    condition="Trending"
    genres={
      Array [
        "crime",
        "actions",
      ]
    }
    name="Tabs"
    onFilterChange={[MockFunction]}
  />
  <MovieList
    fetchTrailer={[MockFunction]}
    movies={
      Array [
        Object {
          "id": 123,
          "title": "title",
        },
      ]
    }
    onClick={[MockFunction]}
    removeDetailsInfo={[MockFunction]}
    setMoviesCondition={[MockFunction]}
  />
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly when movies is loading 1`] = `
<div
  className="container"
>
  <FilterTabs
    condition="Trending"
    genres={Array []}
    name="Tabs"
    onFilterChange={[MockFunction]}
  />
  <Spinner />
</div>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with closed modal window 1`] = `
<section
  className="container"
>
  <FilterTabs
    condition="Trending"
    genres={
      Array [
        "crime",
        "actions",
      ]
    }
    name="Tabs"
    onFilterChange={[MockFunction]}
  />
  <MovieList
    fetchTrailer={[MockFunction]}
    movies={
      Array [
        Object {
          "id": 123,
          "title": "title",
        },
      ]
    }
    onClick={[MockFunction]}
    removeDetailsInfo={[MockFunction]}
    setMoviesCondition={[MockFunction]}
  />
</section>
`;

exports[`MoviesSection tests MoviesSection render MoviesSection renders correctly with error message 1`] = `
<div
  className="container"
>
  Error! error
</div>
`;
